syntax = "proto3";

option csharp_namespace = "AuthProtocol";

service Authenticator {
	rpc CheckLogin (AuthRequest) returns (AuthResponse);
}

message AuthRequest {
	string login = 1;
	string password = 2;
	int32 roleId = 3;
}

message AuthResponse {
	int32 status = 1;
}